Fixed width of active filter on the mobile version, PR changes - updated plugin z-indexes

--- a/resources/sass/abstracts/_z-index.scss
+++ b/resources/sass/abstracts/_z-index.scss
@@ -1,7 +1,12 @@
+$zi-plugin-notice: 1010;
+$zi-plugin-tooltip-arrow: 1001;
+$zi-plugin-tooltip: 1000;
+
 $zi-nav-menu-overlay-active: 111;
 $zi-nav-menu: 110;
-$zi-map-aside: 100;
+$zi-filter-content: 105;
 $zi-map-aside-theme-list: 101;
+$zi-map-aside: 100;
 
 $zi-global-search-input: 11;
 $zi-global-search-wrapper: 10;
